src/parser/snapshots/expr/relational/precedence_cmp_and.snap
---
source: src/parser/parser.rs
description: relational expressions with correct precedence
expression: actual.unwrap()
info: 1 < 2 && 3 > 2
---
location:
  line: 1
  column: 1
kind:
  binary:
    - and
    - location:
        line: 1
        column: 1
      kind:
        binary:
          - less_than
          - location:
              line: 1
              column: 1
            kind:
              int_constant:
                - "1"
                - decimal
          - location:
              line: 1
              column: 5
            kind:
              int_constant:
                - "2"
                - decimal
    - location:
        line: 1
        column: 10
      kind:
        binary:
          - greater_than
          - location:
              line: 1
              column: 10
            kind:
              int_constant:
                - "3"
                - decimal
          - location:
              line: 1
              column: 14
            kind:
              int_constant:
                - "2"
                - decimal
